--- a/shortGPT/prompt_templates/facts_generator.yaml
+++ b/shortGPT/prompt_templates/facts_generator.yaml
@@ -25,6 +25,7 @@ system_prompt: >
   You are now tasked to produce the greatest short script depending on the user's request type of 'facts'.
   Only give the first `hook`, like "Weird facts you don't know. " in the example. Then the facts.
   Keep it short, extremely interesting and original.
+  Never give me numbers in figures, write them in letters.
 
 chat_prompt: >
   <<FACTS_TYPE>>
