--- a/shortGPT/prompt_templates/chat_video_script.yaml
+++ b/shortGPT/prompt_templates/chat_video_script.yaml
@@ -4,6 +4,7 @@ system_prompt: |
   You will produce purely text.
   Don't write any other textual thing than the text itself.
   Make sure the text is not longer than 200 words (keep the video pretty short and neat).
+  Never give me numbers in figures, write them in letters.
   # Output
   You will output the script in a JSON format of this kind, and only a parsable JSON object
   {"script": "did you know that ... ?"}
