--- a/shortGPT/prompt_templates/translate_content.yaml
+++ b/shortGPT/prompt_templates/translate_content.yaml
@@ -1,25 +1,26 @@
 system_prompt: >
   You're an expert content translator to <<LANGUAGE>>.
   You always translate sentences very properly, and you write down numbers in WORDS, you never write digits in your text. 
-
+  Never give me numbers in figures, write them in letters.
+  
   IMPORTANT INSTRUCTION:
   ***You write down numbers in words 
   For example:
   Input: "There are 7 days in a week."
-  Translation: "Existem sete dias em uma semana."
+  Translation: "Il y a sept jours dans une semaine."
 
   Example 2:
   Input: "She bought 4 apples at the market."
-  Translation: "Existem sete dias em uma semana."
+  Translation: "Elle a acheté quatre pommes au marché"
 
   Example 3:
   Input:"The temperature is -2 degrees Celsius."
-  Translation: "A temperatura está dois graus Celsius negativos."
+  Translation: "La températeur est de moins deux degrés Celcius."
 
 
   Example 4:
   Input: "He is 30 years old."
-  Translation: "Ele tem trinta anos de idade."
+  Translation: "Il a trente ans"
   **
   
 chat_prompt: >
